# AdventureJourney

./: .gitignore  .gitmodules  CMakeLists.txt  Galaxy at War.sln  GalaxyAtWar.sln  Makefile  README.md  Test  build.sh  build.txt  code_check.txt  errors.txt  run.sh  task  task.ps1  task.sh  trace.txt  via.html
Debug/: Playground.ilk
assets/fonts/: BMFTest.json  OCR A Extended_20.json  TTFTest.json
assets/models/dummies/: deer.cg2vd  floor.cg2vd  suzanne.cg2vd
assets/shaders/: base_frg_null.frag  base_frg_write_color_buffer.frag  base_vtx_full.vert  direct_triangle.frag  example.fs.glsl  example.vert  example.vs.glsl  frg_albedo_mat_only.frag  frg_lighting_none.frag  frg_lighting_phong.frag  frg_normal_attrib.frag  ligth.fs.glsl  ligth.vs.glsl  passthrough.fs.glsl  passthrough.vs.glsl  simple.vert  texture.fs.glsl  texture.vs.glsl  vtx_tf_skybox.vert  vtx_tf_static_full.vert
assets/shaders/base/: color.frag  deferredIn.frag  deferredIn.vert  deferredOut.frag  deferredOut.vert  depth.frag  full.vert  positionOnly.vert
assets/shaders/fragment/: albedoSkybox.frag  lightingDebug.frag  lightingNone.frag  lightingPhong.frag  materialOnly.frag  materialProps.frag  materialPropsSimple.frag  normalAttrib.frag  textureOnly.frag
assets/shaders/postProcessing/: blur.frag  kernel.frag  kernelPrototype.frag  noPp.frag  pixelate.frag  pp.vert
assets/shaders/text/: drawString.frag  drawString.vert
assets/shaders/vertex/: full.vert  simple.vert  skybox.vert
common/: common.vcxproj
common/include/: Defs.hpp  Event.hpp  Exception.hpp  Geometry.hpp  Terminal.hpp  Test.hpp  event.hpp  exception.hpp  list.hpp  test.hpp
common/include/data/: EnumHelper.hpp  Helper.hpp  Io.hpp  IteratorUtils.hpp  Json.hpp  Math.hpp  Random.hpp  String.hpp  json.hpp  math.hpp  random.hpp  string.hpp
common/include/datetime/: Conversions.hpp  timer.hpp
common/include/event/: FunctionEvent.hpp  GeneralizedEvent.hpp  HandlerEvent.hpp  SignalEvent.hpp  listener_event.hpp  signal_event.hpp
common/include/geometry/: Dimension.hpp  Point.hpp  Rectangle.hpp
common/include/graphics/: Color.hpp
common/include/terminal/: Canvas.hpp  Screen.hpp  TerminalView.hpp  TerminalWindow.hpp  Util.hpp  Values.hpp  View.hpp  Window.hpp  canvas.hpp  terminal_view.hpp  terminal_window.hpp  values.hpp
common/src/data/: Args.cpp  Conversions.cpp  FormatException.cpp  Io.cpp  ParsingException.cpp  StringUtils.cpp  convert.cpp  io.cpp  rand.cpp  string_conversions.cpp
common/src/datetime/: Conversions.cpp  datetime_conversions.cpp  timer.cpp
common/src/event/: SignalEvent.cpp
common/src/exception/: IndexOutOfRangeException.cpp  InvalidCaseException.cpp  MissingKeyException.cpp  OverflowException.cpp  Utils.cpp  exception.cpp  invalid_case_exception.cpp  missing_key_exception.cpp  overflow_exception.cpp  utils.cpp
common/src/graphics/: Color.cpp  color.cpp
common/src/terminal/: Canvas.cpp  ColorPallette.cpp  ControlStyleColorPallette.cpp  DefaultColorPallette.cpp  Dimension.cpp  Listings.cpp  View.cpp  (+9 more)
common/test/: TestList.hpp  main.cpp  test_list.hpp
core/: core.vcxproj
core/include/: Engine.hpp  GameCore.hpp  Version.hpp  engine.hpp
core/src/: main.cpp
doc/: Makefile  commands.tex  core.tex
gui/: gui.vcxproj
gui/include/: DummyData.hpp  GlScreens.hpp  GlUtils.hpp  GlmToStringConversions.hpp  Objects.hpp
gui/src/: main.cpp
include/: config.hpp  data.hpp  defs.hpp  event.hpp  exception.hpp  geometry.hpp  graphics.hpp  json.hpp  lib.hpp  list.hpp  terminal.hpp  util.hpp
include/data/: args.hpp  helper.hpp  io.hpp  json.hpp  key_value_settings.hpp  math.hpp  numeric_conversions.hpp  rand.hpp  string.hpp  string_conversions.hpp
include/datetime/: datetime_conversions.hpp  timer.hpp
include/event/: function_event.hpp  handler_event.hpp  signal_event.hpp
include/geometry/: dimension.hpp  point.hpp  rectangle.hpp
include/graphics/: color.hpp
include/terminal/: canvas.hpp  control_base.hpp  terminal_view.hpp  terminal_window.hpp  text_view.hpp  values.hpp
lib/data/: args.cpp  convert.cpp  exception.cpp  file.cpp  file_not_found_Exception.cpp  index_out_of_range_exception.cpp  missing_key_exception.cpp  rand.cpp  round_timer.cpp  string_conversions.cpp  string_util.cpp  timer.cpp
lib/datetime/: round_timer.cpp
lib/event/: signal_event.cpp
lib/exception/: exception.cpp  exception.hpp  file_not_found_exception.cpp  index_out_of_range_exception.cpp  invalid_case_exception.cpp  missing_key_exception.cpp
lib/graphics/: color.cpp
lib/json/: array_node.cpp  formatted_printer.cpp  i_json_mappable.cpp  json_mapper.cpp  node.cpp  object_node.cpp  operation_exception.cpp  parser.cpp  parser_exception.cpp  primitive_node.cpp  string_conversions.cpp  token.cpp  tokenizer.cpp  value_exception.cpp  value_node.cpp
lib/terminal/: canvas.cpp  control_base.cpp  pattern.cpp  terminal.cpp  terminal_view.cpp  terminal_window.cpp  text_control_base.cpp  text_view.cpp
libCommon/include/: Calculator.hpp  Defs.hpp  Exception.hpp  Linq.hpp  Test.hpp
libCommon/test/: TestList.hpp
libGlUtil/include/: GlUtils.hpp  Objects.hpp
libTermUtil/include/: Canvas.hpp  Screen.hpp  Size.hpp  Terminal.hpp  Values.hpp  View.hpp  Window.hpp
libTermUtil/src/: Canvas.cpp  ColorPallette.cpp  ControlStyleColorPallette.cpp  Dimension.cpp  Listings.cpp  Screen.cpp  Size.cpp  StringConversions.cpp  Utils.cpp  View.cpp
libs/glad/: README.txt
playground/: main.cpp  playground.vcxproj
src/: main.cpp  util.hpp  version.hpp
src/core/: Core.vcxproj  entities.hpp
src/gui/: Gui.vcxproj
src/libCommon/: CMakeLists.txt  libCommon.vcxproj
src/libGlUtil/: libGlUtil.vcxproj
src/libTermUtil/: libTermUtil.vcxproj
src/logic/: entities.hpp
src/playground/: Playground.vcxproj  main.cpp
src/util/: defs.hpp  id_generator_base.hpp  util.hpp
terminal_ui/: terminal_ui.vcxproj
terminal_ui/include/: Screens.hpp
terminal_ui/src/: main.cpp
test/: main.cpp  test.cpp  test.hpp  test_json.hpp
test/data/: simple_test.cpp  test.cpp  test_base.cpp  test_run.cpp
test/tests/: color_test.cpp
vulkan_gui/src/: main.cpp
(+751 files in other folders)
